--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: registration
-        image: admindivya/registration:v1   # use your Docker Hub image
+        image:divyasri1282/registration:v1   # use your Docker Hub image
         ports:
         - containerPort: 5000
+
 
